feat: cors configurations (#11)